# DualArm

./: CMakeLists.txt  README.md  bluenode4.dcf  blueparam.dcf  greennode1.dcf  mani_toq_con_pdo.cpp  redparam.dcf  whitenode3.dcf  whiteparam.dcf
EPOS4/: joint1.dcf
EPOS4/mani_ver1_0706/: node2.dcf  node3.dcf  node4.dcf  node5.dcf  node6.dcf  node7.dcf  node8.dcf  readme.md
EPOS4/mani_ver2_1015/: joint2.dcf  joint3.dcf  joint3_testmode.dcf  joint4.dcf  joint5.dcf  joint6.dcf  joint7.dcf  node1_testmode.dcf  node4_testmode.dcf  node6.dcf  node6_testmode.dcf  node7.dcf  node7_testmode.dcf  readme.md
EPOS4/mobile/: bluenode4.dcf  greennode1.dcf  rednode2.dcf
EPOS4/mobile/new/: node1_green.dcf  node2_red.dcf  node3_white.dcf  node4_blue.dcf  readme.md  whitenode3.dcf
EPOS4/mobile/new/ver2_0703/: node1_green.dcf  node2_red.dcf  node3_white.dcf  node4_blue.dcf
EPOS4/mobile/old/: greenparam.dcf  readme.md
EPOS_Linux_Library/examples/HelloEposCmd/: HelloEposCmd
JetsonXavierAGX/: 99-gpio.rules  readme.md
JetsonXavierAGX/catkin_ws/src/vehicle_control/: cmd_publish (copy).cpp
JetsonXavierAXG/: 40-sensor-dev.rules
MobilePlatform/: 99-gpio.rules  readme.md  readme.txt
MobilePlatform/JetsonTX2/: readme.md
MobilePlatform/JetsonTX2/commander/: CMakeLists.txt
MobilePlatform/JetsonTX2/hc_sr04_/: CMakeLists.txt  package.xml
MobilePlatform/JetsonTX2/hc_sr04_/include/: hcsr04.h
MobilePlatform/JetsonTX2/imu_read_data/: CMakeLists.txt  package.xml
MobilePlatform/JetsonTX2/imu_read_data/launch/: imu_read.launch
MobilePlatform/JetsonTX2/imu_read_data/msg/: msgImu.msg
MobilePlatform/JetsonTX2/imu_read_data/src/: imu_read.cpp
MobilePlatform/JetsonTX2/jetson/: package.xml
MobilePlatform/JetsonTX2/jetson/launch/: jetson.launch
MobilePlatform/JetsonXavierAGX/: dual_VLP16_points.launch  readme.md
MobilePlatform/JetsonXavierAGX/catkin_ws/: readme.md
MobilePlatform/JetsonXavierAGX/catkin_ws/src/vehicle_control/: CMakeLists.txt  package.xml
MobilePlatform/JetsonXavierAGX/catkin_ws/src/vehicle_control/launch/: contrl_enc.launch  contrl_enc_only.launch  contrl_vio.launch  mobile_ctrl.launch
MobilePlatform/JetsonXavierAGX/catkin_ws/src/vehicle_control/src/: cmd_publish.cpp  cmd_publish_2.cpp  cmd_publish_3.cpp  encoder_actual.cpp  encoder_only.cpp  encoder_quat.cpp  exp1_1.cpp  exp2.cpp  exp3_1.cpp  exp3_2.cpp  experiment_route2.cpp  mobile_controller_enc.cpp  mobile_controller_vio.cpp  motor_dynamics.cpp  vehicle_controller.cpp  vel_cmd.cpp  vel_cmd_circle_fix.cpp
MobilePlatform/commander/: package.xml
MobilePlatform/commander/src/: command_node.cpp
MobilePlatform/hc_sr04_/include/: hcsr04 (copy).h  hcsr04.cpp  jetsonGPIO (copy).h
MobilePlatform/hc_sr04_/src/: simpleHCSR04.cpp
MobilePlatform/heajin_refer/: readme.md
MobilePlatform/heajin_refer/cpp_sensor_talker/: CMakeLists.txt  package.xml
MobilePlatform/heajin_refer/cpp_sensor_talker/src/: arduino_serial.cpp
MobilePlatform/heajin_refer/ether_cpp/HJ_ADAPTIVE_RLS/: ethercat_control.cpp
MobilePlatform/heajin_refer/ether_cpp/final_code/: ethercat_control.cpp
MobilePlatform/heajin_refer/ether_cpp/motor/: ethercat_control.cpp
MobilePlatform/heajin_refer/ether_cpp/pid/: ethercat_control.cpp
MobilePlatform/heajin_refer/ethercat_test/: CMakeLists.txt
MobilePlatform/heajin_refer/ethercat_test/src/: ar_serial.cpp  ethercat_control.cpp  pdo_def.h
MobilePlatform/heajin_refer/mini45/: CMakeLists.txt  package.xml
MobilePlatform/heajin_refer/mini45/scripts/: ex.py  mini45_Initializing.py  talker.py
MobilePlatform/heajin_refer/msgpkg/: CMakeLists.txt
MobilePlatform/heajin_refer/msgpkg/msg/: realVal.msg
MobilePlatform/heajin_refer/sensor_talker/: CMakeLists.txt  package.xml
MobilePlatform/heajin_refer/sensor_talker/src/: ADC_read.py  force_talker.py  load_talker1.py  load_talker2.py  tactile_talker.py
MobilePlatform/jetson/: CMakeLists.txt
MobilePlatform/odyssey/: 2020-08-03-13-17-47.bag  2020-08-03-13-20-28.bag  2020-08-03-13-22-58.bag  README.md
MobilePlatform/odyssey/ethercat_test/: CMakeLists.txt
MobilePlatform/odyssey/ethercat_test/src/: ethercat_control.cpp  ethercat_control_csv (copy).cpp  ethercat_control_mobile copy.cpp  ethercat_control_mobile.cpp  ethercat_control_test.cpp  ethercat_ctrl_integ.cpp  ethercat_profile.cpp  ethercat_pub.cpp  pdo_def.h  servo_def.c  servo_def.h
MobilePlatform/odyssey/sim_control/: CMakeLists.txt
MobilePlatform/odyssey/sim_control/src/: tracking_pd_controller.cpp
MobilePlatform/odyssey/vehicle_control/: CMakeLists.txt
MobilePlatform/odyssey/vehicle_control/msg/: testMsg.msg
MobilePlatform/odyssey/vehicle_control/src/: encoder_actual.cpp
controllaptop/vehicle_control/: CMakeLists.txt
controllaptop/vehicle_control/src/: vel_cmd.cpp
mobile_platform_ros/: mobile.urdf.xacro  mobile_standalone.urdf.xacro
motordriverparam/new/: rednode2.dcf
raspberryPI/: README.md  Readme.md
raspberryPI/epos_tutorial/src/: controller_pdo.cpp  controller_pdo.cpp.save  vel_con_client.cpp  vel_con_server.cpp
raspberryPI/msg/: realVel.msg
raspberryPI/src/: commander.cpp  controller.cpp  controller_pdo.cpp  motor_sensor.cpp  vel_cmd_circle_fix.cpp  vel_con_server.cpp
raspberryPI3B/: README.md  forubuntu18_04server.txt  xenomai-tools.tgz  xenomai_test.cpp  xenomai_test_pican.cpp
raspberryPI3B/Arduino/: readme.md
raspberryPI3B/Arduino/AS5047read/: AS5047read_ros.ino  readme.md
raspberryPI3B/Arduino/VL53L1X_14/: VL53L1X_14.ino
raspberryPI3B/Arduino/VL53L1X_multi/: VL53L1X_multi.ino
raspberryPI3B/Arduino/mobileplatform_sensor/: mobileplatform_sensor.ino
raspberryPI3B/Arduino/test/AS5047read/: AS5047read.ino  readme.md
raspberryPI3B/Arduino/test/sensor_integ/: sensor_integ.ino
raspberryPI3B/EPOS_Linux_Library/: install.sh
raspberryPI3B/EPOS_Linux_Library/examples/HelloEposCmd/: HelloEposCmd.cpp
raspberryPI3B/catkin_ws/: README.md
raspberryPI3B/catkin_ws/epos_tutorial/: CMakeLists.txt  package.xml
raspberryPI3B/catkin_ws/epos_tutorial/src/: commander.cpp  (+3 more)
raspberryPI3B/catkin_ws/mobile_control/: CMakeLists.txt  package.xml
(+21 files in other folders)
